Adding clear button

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
       <div id="preview-wrapper">
         <div id="tabs">
+          <button id="btn-clear">Clear</button>
           <img id="turtle" src="/images/turtle.png" />
           <canvas id="logo" class="canvas"></canvas>
         </div>
